Changelog
=========


Version 2.3.1 (in development)
------------------------------

Rename ``endangerment_source`` table to ``endangerment_source``.


Version 2.3
-----------

Add ``Config`` model  and ``_config?`` table with ``glottolog/config/*.ini`` content.

Load languoid levels, macroareas, and endangerment status from ``Config``,
compare pseudofamily ``Config`` with treedb constants.

Add checksums for Glottolog v4.4.

Improve test coverage.


Version 2.2
-----------

Add ``pd.read_json_lines()``.

Add ``dry_run`` parameter to ``write_files()`` functions.

Improve test environment and increase test coverage.

Improve usage example ``try-treedb.py``.


Version 2.1.2
-------------

Insert languoids in Glottocode order again when loading from raw.


Version 2.1.1
-------------

Fix ``write_files()``.


Version 2.1
-----------

Bump ``pandas`` optional dependency to ``>=1``.

Add ``pd_read_languoids()`` reading json lines.

Add ``limit`` and ``offset`` parameters to ``iterlanguoids()``, ``checksum()``,
``write_languoids()``, and ``pd_read_languoids()``.

Increase test data coverage.

Clean up namespaces, add more type annotations.


Version 2.0
-----------

Add ``source`` parameter to ``iterlanguoids()``, ``checksum()``, and ``write_json_lines()``
to use ``'files'``, ``'raw'``, or ``'tables'`` as data source. 

Changed checksums from ``path_json:id:...`` to ``path_languoid:path:...`` over json lines.

Rename ``treedb.write_json_lines()`` to `` treedb.write_languoids()`` making it equal to checksum.

Rename ``compare_with_files()`` to ``compare_languoids()``.

Rename ``get_json_query()`` to ``get_languoids_query()``.

Rename ``get_query()`` to ``get_example_query()``.


Version 1.5
-----------

Rename ``treedb.export()`` to ``treedb.csv_zipfile()``.

Update SQLAlchemy to 1.4 with FUTURE=True:
- remove bound select (use sqlalchemy select with scalar,
  iterrows, print_rows, write_csv, etc., or with  connect)
- raw now records information about flag definitions