@@ -77,7 +77,7 @@ def main(root, *, conn):
 
     insert_value = functools.partial(conn.execute, sa.insert(Value))
 
-    for path_tuple, cfg, dentry in _files.iterfiles(root):
+    for path_tuple, dentry, cfg in _files.iterfiles(root):
         sha256 = _tools.sha256sum(dentry.path, raw=True)
 
         file_params = {'glottocode': path_tuple[-1],
